--- a/less/base/reset.css
+++ b/less/base/reset.css
@@ -1,9 +1,6 @@
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
+*:where(:not(iframe, canvas, img, svg, video):not(svg *)) {
+  all: unset;
+  display: revert;
 }
 html {
   font-size: 62.5%;
