--- a/less/components/button.less
+++ b/less/components/button.less
@@ -10,7 +10,7 @@ button.btn {
   border: none;
   text-transform: uppercase;
   border-radius: 5px;
-  padding: 2.2rem 3rem;
+  padding: 1.2rem 3rem;
   cursor: pointer;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   font-size: 1.5rem;
