--- a/less/pages/main.less
+++ b/less/pages/main.less
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: space-between;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 /*---------------------
     Personal Details 
@@ -16,7 +16,7 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  width: 50%;
+  width: 45%;
   background: @light_blue;
 }
 /* Text */
@@ -25,7 +25,6 @@
   bottom: 5%;
   left: 10%;
   width: fit-content;
-  // transform: translateY(-50%);
 }
 
 /*-- Mega Header --*/
@@ -73,4 +72,13 @@
   height: 100%;
   background-image: url("/assets/israel-background-color.jpeg");
   background-size: cover;
+}
+
+/**************************
+     Services Section
+/**************************/
+.services-section {
+  height: 100vh;
+  width: 100%;
+  background: red;
 }
